# OmniRust

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: api_response.json  employees.json
src/: display.rs  engine.rs  export.rs  input.rs  jsonpath.rs  jsonutil.rs  main.rs  timestamp.rs
