[package]
name = "omnirust"
version = "0.1.1"
edition = "2021"
description = "All your developer tools. One blazingly fast Rust binary."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
comfy-table = "7.2.2"
duckdb = { version = "1.4.0", features = ["bundled"] }
serde_json = "1.0.149"
