[package]
name = "omnirust"
version = "0.1.1"
edition = "2021"
description = "All your developer tools. One blazingly fast Rust binary."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
arrow-json = "53.4"
atty = "0.2.14"
chrono = "0.4.39"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
comfy-table = "7.2.2"
datafusion = "44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
